# burnr

./: Cargo.toml  README.md
.github/workflows/: ci.yml
doc/planning/: claude-code-log-format.md  plan.md
src/: app.rs  config.rs  main.rs
src/fire/: mod.rs  particle.rs  system.rs
src/ingest/: event.rs  mod.rs  session.rs  tailer.rs  watcher.rs
