[package]
name = "burnr"
version = "0.1.0"
edition = "2024"
description = "burnr — a bonfire of glyphs in your terminal, burning the tokens your Claude Code session burns"
homepage = "https://github.com/jimbarritt/burnr"
repository = "https://github.com/jimbarritt/burnr"
license = "MIT"
readme = "README.md"
keywords = ["claude", "tui", "terminal", "tokens", "visualisation"]
categories = ["command-line-utilities", "development-tools", "visualization"]
# Keep the package lean: GIFs and planning docs live in the repo, not the
# crate. crates.io rewrites the README's relative image path to GitHub.
exclude = ["doc/", ".github/"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.10.2"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
